# ros-jaus-bridge

./: CMakeLists.txt  README.md  package.xml
bridge_plugins/LocalPose/: LocalPose.pro
bridge_plugins/LocalPose/include/: local_pose_plugin.h
bridge_plugins/LocalPose/src/: local_pose_plugin.cpp
bridge_plugins/RobotInformation/: RobotInformation.pro
bridge_plugins/RobotInformation/include/: robot_information_plugin.h
bridge_plugins/RobotInformation/include/jaus_msg/: robot_information.h
bridge_plugins/RobotInformation/src/: robot_information_plugin.cpp
bridge_plugins/RobotInformation/src/jaus_msg/: robot_information.cpp
bridge_plugins/WrenchEffort/: WrenchEffort.pro
bridge_plugins/WrenchEffort/include/: wrench_effort_plugin.h
bridge_plugins/WrenchEffort/src/: wrench_effort_plugin.cpp
bridge_plugins/plugin_interface/: plugin_interface.h
include/bridge/: bridge_component.h  bridge_core.h  exception.h  jaus_component.h  ros_node.h
include/plugin/: plugin_interface.h
ros_custom_msgs/: CMakeLists.txt  package.xml
ros_custom_msgs/msg/: RobotInformation.msg  SetWrenchEffort.msg
src/bridge/: bridge_core.cpp  rj_bridge_node.cpp
src/test_apps/: jaus_publisher.cpp  jaus_subscriber.cpp  ros_publisher.cpp  ros_subscriber.cpp
