<?xml version="1.0"?>
<package>
  <name>rj_bridge</name>
  <version>0.0.1</version>
  <description>ROS-Jaus communication bridge.</description>

  <maintainer email="stabaka@piap.pl">Sebastian Tabaka</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
