<?xml version="1.0"?>
<package>
  <name>rj_bridge_ros_msgs</name>
  <version>0.0.1</version>
  <description>The rj_bridge ROS messages generator.</description>

  <maintainer email="stabaka@piap.pl">Sebastian Tabaka</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
